--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,8 @@
     "./styles.css": "./dist/index.css",
     "./card": "./src/card.tsx",
     "./Button": "./src/Button/index.tsx",
-    "./providers": "./src/providers/index.tsx"
+    "./providers": "./src/providers/index.tsx",
+    "./Button2": "./src/Button/button2.tsx"
   },
   "license": "MIT",
   "scripts": {
